Fixed joinWithNext() for joing segments, updated tests.
git-svn-id: https://okapi.googlecode.com/svn/trunk@4626 0cd2bb99-014b-0410-b875-5d0485b745ed